--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@
 # production
 /build
 
+.env
+
+
+
 # misc
 .DS_Store
 *.pem
@@ -39,3 +43,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/lib/generated/prisma
